fix: surefire compatibility