@@ -223,19 +223,6 @@
                         </executions>
                     </plugin>
 
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.2.5</version>
-                        <configuration>
-                            <argLine>
-                                -javaagent:"${settings.localRepository}/org/mockito/mockito-core/5.2.0/mockito-core-5.2.0.jar"
-                                -Djdk.instrument.traceUsage=false
-                                -XX:+EnableDynamicAgentLoading
-                            </argLine>
-                        </configuration>
-                    </plugin>
-
                 </plugins>
             </build>
         </profile>
